src/css/imports/layout.css
html {
  background-color: var(--white);
}

.wrapper {
  margin: 0 2.4rem 0 4.8rem;
  width: initial;
  @media (--medium) {
    width: var(--med-width);
    margin: 0 auto;
  }
  @media (--large) {
    width: var(--large-width);
  }
}

.logo {
  height: 3rem;
  perspective: 100rem;
  @media (--medium) {
    height: 4rem;
  }
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  padding: 40vh 0 0 0;
}

.hero--index {
  height: 100vh;
  padding: 0;
}

.hero__details {
  position: absolute;
  bottom: 1.6rem;
}

.logotype {
  position: fixed;
  text-transform: uppercase;
  font-family: var(--sans-medium);
  margin: 9.6rem 2.4rem 0;
  font-size: 2.4rem;
  width: calc(100vw - (100vw - 100%));
  height: 100vh;
  @media (--medium) {
    margin: 10.8rem 2.4rem 0;
  }
}

.logotype--rotate-left {
  transform: rotate(90deg);
  transform-origin: left top 0;
  margin-left: 2.4rem;
}

.logotype--rotate-right {
  display: inline;
  @media (--medium) {
    display: block;
    transform: rotate(-90deg);
    transform-origin: left top 0;
    margin: 3.6rem 4rem 0 0;
    float: right;
  }
}

.logotype--rotate-btm {
  display: inline;
  @media (--medium) {
    display: block;
    position: fixed;
    transform: rotate(180deg);
    transform-origin: right bottom 0;
    float: right;
    right: 7.2rem;
    bottom: 4.8rem;
  }
}

.logotype--fixed {
  position: fixed;
}

.header {
  padding: 2.4rem;
  border-bottom: 1px var(--med-grey) solid;
  position: absolute;
  width: 100%;
  background: var(--white);
  z-index: 5;
}

.header__menu-icon,
.header__bread {
  position: absolute;
  top: 0;
  right: 0;
  width: 7.2rem;
  height: 8.1rem;
  @media (--medium) {
    width: 8.2rem;
    height: 9.1rem;
  }
}

.header__bun {
  position: absolute;
  background: var(--primary);
  width: 2.4rem;
  height: 3px;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.header__bun--top {
  top: 40%;
}
.header__bun--btm {
  top: 62%;
}

#id__menu-state {
  position: absolute;
  display: none;
  clip: rect(0, 0, 0, 0);
}

label[for="id__menu-state"] {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 5;
  width: 7.2rem;
  height: 8.1rem;
  cursor: pointer;
}

#id__menu-state:checked + label {
  top: 5rem;
}

#id__menu-state:checked ~ .nav {
  opacity: 1;
  pointer-events:all;
}

#id__menu-state:checked ~ .header {
  position: fixed;
}

.nav {
  top: 8.2rem;
  margin: 0 auto;
  text-align: center;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 5;
  opacity: 0;
  pointer-events:none;
  transition: opacity ease 0.2s;
}

.nav__list {
  background: var(--white);
  padding: 4.8rem 0;
  width: 100%;
  height: 100vh;
}

.content {
  padding: 8.8rem 0 4rem 0;
  @media (--medium) {
    padding: 9.6rem 0 4rem 0;
  }
}

.content--flex {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.content__list {
  margin: 3.2rem 0;
  width: initial;
  @media (--medium) {
    margin: 9.6rem 0 0 0;
    width: calc(var(--large-width)/3 - 4.8rem);
  }
}

.content--flex::after {
  @media (--medium) {
    content: '';
    width: calc(var(--large-width)/3 - 4.8rem);
  }
}

.content__list:first-of-type {
  margin: 4.8rem 0 0 0;
  @media (--medium) {
    margin: 9.6rem 0 0 0;
  }
}

.content__thumb {
  padding: 0 0 0.8rem 0;
}

.content__photo {
  margin: 0 0 4.8rem 0;
}

.footer {
  margin: 0 2.4rem 3.2rem 2.4rem;
  padding: 8.8rem 0 0 0;
  width: initial;
  @media (--medium) {
    padding: 9.6rem 0 0 0;
    width: var(--med-width);
    margin: 0 auto 4.8rem auto;
  }
  @media (--large) {
    width: var(--large-width);
  }
}

.footer__nav,
.footer__social,
.footer__cta {
  padding: 2.4rem 0 0 0;
}

.footer__link,
.footer__social-link {
  display: block;
  padding: 0.8rem 0;
}

.footer__link:last-of-type {
  padding: 0.8rem 0 0 0;
}

.footer__link--inline {
  display: inline;
}

.footer__spacer {
  padding: 0 0.4rem;
}

img {
  display: block;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

